Prevent total freeze
Signed-off-by: Mickael Istria <mistria@redhat.com>